--- a/_sass/so-simple/_icons.scss
+++ b/_sass/so-simple/_icons.scss
@@ -31,6 +31,7 @@
      (stackoverflow, #fe7a16),
      (tumblr, #36465d),
      (twitter, #1da1f2),
+     (x-twitter, #1da1f2),
      (xing, #005a5f),
      (youtube, #cd201f)
   );
