dark theme fix - attempt_2

--- a/assets/css/skins.scss
+++ b/assets/css/skins.scss
@@ -1,4 +1,4 @@
-@import "skins/default"
+@import "default";
 @media (prefers-color-scheme: dark) {
-    @import "skins/dark"
+    @import "dark";
 }
