dark theme fix - attempt_4

--- a/assets/css/skins.scss
+++ b/assets/css/skins.scss
@@ -1,4 +1,4 @@
-@import "default";
+@import "so-simple/skins/default";
 @media (prefers-color-scheme: dark) {
-    @import "dark";
+    @import "so-simple/skins/dark";
 }
