dark theme fix - attempt_8

--- a/assets/css/skin_control.scss
+++ b/assets/css/skin_control.scss
@@ -12,6 +12,7 @@
 @import "so-simple/variables";
 @import "so-simple/notices";
 
+/*Defaul Values*/
 /* Colors */
 $base-color: #000 !default;
 $text-color: #000 !default;
