--- a/_sass/so-simple/_skin.scss
+++ b/_sass/so-simple/_skin.scss
@@ -4,21 +4,21 @@
 
 body {
   color: var(--text-color);
-  background: var(--background-color);
-  border-top-color: var(--nav-background-color);
+  background: $background-color;
+  border-top-color: $nav-background-color;
 }
 
 a {
-  color: var(--accent-color);
+  color: $accent-color;
 
   &:hover {
-    color: shade(var(--accent-color), 25%);
+    color: shade($accent-color, 25%);
   }
 }
 
 blockquote {
-  background-color: mix(var(--background-color), var(--accent-color), 90%);
-  border-left-color: var(--accent-color);
+  background-color: mix($background-color, $accent-color, 90%);
+  border-left-color: $accent-color;
 }
 
 /* ==========================================================================
@@ -27,127 +27,127 @@ blockquote {
 
 .site-title {
   a {
-    color: var(--text-color);
+    color: $text-color;
   }
 }
 
 .copyright {
-  color: lighten(var(--text-color), 25%);
+  color: lighten($text-color, 25%);
   a {
-    color: lighten(var(--text-color), 25%);
+    color: lighten($text-color, 25%);
   }
 }
 
 .taxonomy-title {
-  color: lighten(var(--text-color), 60%);
+  color: lighten($text-color, 60%);
 }
 
 .taxonomy-count {
-  color: lighten(var(--text-color), 50%);
+  color: lighten($text-color, 50%);
 }
 
 .taxonomy-index {
   a {
-    border-bottom-color: var(--border-color);
+    border-bottom-color: $border-color;
 
     &:hover {
-      color: var(--accent-color);
+      color: $accent-color;
     }
   }
 }
 
 .taxonomy-section {
   &:not(:last-child) {
-    border-bottom-color: var(--border-color);
+    border-bottom-color: $border-color;
   }
 }
 
 .back-to-top {
-  color: lighten(var(--text-color), 50%);
+  color: lighten($text-color, 50%);
 }
 
 .site-nav {
   ul {
-    color: var(--nav-color);
-    background-color: var(--nav-background-color);
+    color: $nav-color;
+    background-color: $nav-background-color;
   }
 
   a {
-    color: var(--nav-color);
-    border-color: var(--nav-background-color);
+    color: $nav-color;
+    border-color: $nav-background-color;
 
     &:hover {
-      border-color: var(--nav-color);
+      border-color: $nav-color;
     }
   }
 }
 
 .site-footer {
-  border-top-color: var(--border-color);
+  border-top-color: $border-color;
 }
 
 .footnotes {
-  border-top-color: var(--border-color);
+  border-top-color: $border-color;
 }
 
 .site-logo-img {
-  border-color: var(--background-color);
+  border-color: $background-color;
 }
 
 .toc-wrapper {
-  border-color: mix(#fff, var(--border-color), 25%);
+  border-color: mix(#fff, $border-color, 25%);
 
   h2 {
-    color: var(--base05);
-    background-color: var(--base00);
+    color: $base05;
+    background-color: $base00;
   }
 
   li {
     ol {
-      background-color: var(--background-color);
+      background-color: $background-color;
     }
 
     a {
       &:hover,
       &:focus {
-        border-bottom: 1px dotted var(--border-color);
+        border-bottom: 1px dotted $border-color;
       }
     }
   }
 }
 
 #menu-toggle {
-  color: var(--nav-color);
+  color: $nav-color;
 }
 
 #menu-toggle {
-  background-color: var(--nav-background-color);
+  background-color: $nav-background-color;
 }
 
 #markdown-toc {
-  color: var(--base05);
+  color: $base05;
 }
 
 .pagination {
   li {
     a {
-      color: mix(var(--text-color), var(--border-color), 50%);
-      border-color: var(--border-color);
+      color: mix($text-color, $border-color, 50%);
+      border-color: $border-color;
 
       &.current,
       &.current.disabled {
-        @include yiq-contrasted(mix(var(--text-color), var(--border-color), 50%));
+        @include yiq-contrasted(mix($text-color, $border-color, 50%));
       }
 
       &.disabled {
-        color: var(--border-color);
+        color: $border-color;
       }
     }
   }
 }
 
 .search-input {
-  border-color: var(--border-color);
+  border-color: $border-color;
 }
 
 /* ==========================================================================
@@ -156,7 +156,7 @@ blockquote {
 
 .page-previous,
 .page-next {
-  color: var(--text-color);
+  color: $text-color;
 }
 
 /* ==========================================================================
@@ -166,7 +166,7 @@ blockquote {
 .entry {
   a {
     &:hover {
-      color: var(--accent-color);
+      color: $accent-color;
     }
   }
 }
@@ -177,7 +177,7 @@ blockquote {
 
 th,
 td {
-  border-bottom-color: var(--border-color);
+  border-bottom-color: $border-color;
 }
 
 
@@ -187,37 +187,37 @@ td {
 
 /* Default notice */
 .notice {
-  @include notice(lighten(var(--base-color), 90%));
+  @include notice(lighten($base-color, 90%));
 }
 
 /* Accent notice */
 .notice--accent {
-  @include notice(mix(#fff, var(--accent-color), 70%));
+  @include notice(mix(#fff, $accent-color, 70%));
 }
 
 /* Primary notice */
 .notice--primary {
-  @include notice(mix(#fff, var(--primary-color), 70%));
+  @include notice(mix(#fff, $primary-color, 70%));
 }
 
 /* Warning notice */
 .notice--warning {
-  @include notice(mix(#fff, var(--warning-color), 70%));
+  @include notice(mix(#fff, $warning-color, 70%));
 }
 
 /* Success notice */
 .notice--success {
-  @include notice(mix(#fff, var(--success-color), 70%));
+  @include notice(mix(#fff, $success-color, 70%));
 }
 
 /* Danger notice */
 .notice--danger {
-  @include notice(mix(#fff, var(--danger-color), 70%));
+  @include notice(mix(#fff, $danger-color, 70%));
 }
 
 /* Info notice */
 .notice--info {
-  @include notice(mix(#fff, var(--info-color), 70%));
+  @include notice(mix(#fff, $info-color, 70%));
 }
 
 /* ==========================================================================
@@ -228,7 +228,7 @@ td {
 .screen-reader-text,
 .screen-reader-text span,
 .screen-reader-shortcut {
-  background-color: var(--base-color);
+  background-color: $base-color;
 }
 
 /* ==========================================================================
@@ -237,9 +237,9 @@ td {
 
 .btn {
   /* button colors */
-  $buttoncolors: (primary, var(--primary-color)), (accent, var(--accent-color)), (inverse, #fff),
-  (light-outline, transparent),  (success, var(--success-color)),
-  (warning, var(--warning-color)),  (danger, var(--danger-color)),  (info, var(--info-color)),
+  $buttoncolors: (primary, $primary-color), (accent, $accent-color), (inverse, #fff),
+  (light-outline, transparent),  (success, $success-color),
+  (warning, $warning-color),  (danger, $danger-color),  (info, $info-color),
   (facebook, $facebook-color),  (twitter, $twitter-color), (x-twitter, $x-twitter-color),
   (google-plus, $google-plus-color),  (linkedin, $linkedin-color),
   (reddit, $reddit-color);
@@ -248,7 +248,7 @@ td {
     &--#{$buttoncolor} {
       @include yiq-contrasted($color);
       @if ($buttoncolor == inverse) {
-        border: 1px solid var(--border-color);
+        border: 1px solid $border-color;
       }
       @if ($buttoncolor == light-outline) {
         border: 1px solid #fff;
@@ -270,77 +270,77 @@ td {
    ========================================================================== */
 
 code.highlighter-rouge {
-  color: var(--base05);
-  background-color: var(--base00);
+  color: $base05;
+  background-color: $base00;
 }
 
 div.highlighter-rouge,
 figure.highlight {
-  color: var(--base05);
-  background-color: var(--base00);
+  color: $base05;
+  background-color: $base00;
 }
 
 .highlight table {
   td {
     &.gutter {
-      color: var(--base04);
-      border-right-color: var(--base04);
+      color: $base04;
+      border-right-color: $base04;
     }
   }
 }
 
 .highlight .hll {
-  background-color: var(--base06);
+  background-color: $base06;
 }
 
 .highlight {
   .c {
     /* Comment */
-    color: var(--base04);
+    color: $base04;
   }
   .err {
     /* Error */
-    color: var(--base08);
+    color: $base08;
   }
   .k {
     /* Keyword */
-    color: var(--base0e);
+    color: $base0e;
   }
   .l {
     /* Literal */
-    color: var(--base09);
+    color: $base09;
   }
   .n {
     /* Name */
-    color: var(--base05);
+    color: $base05;
   }
   .o {
     /* Operator */
-    color: var(--base0c);
+    color: $base0c;
   }
   .p {
     /* Punctuation */
-    color: var(--base05);
+    color: $base05;
   }
   .cm {
     /* Comment.Multiline */
-    color: var(--base04);
+    color: $base04;
   }
   .cp {
     /* Comment.Preproc */
-    color: var(--base04);
+    color: $base04;
   }
   .c1 {
     /* Comment.Single */
-    color: var(--base04);
+    color: $base04;
   }
   .cs {
     /* Comment.Special */
-    color: var(--base04);
+    color: $base04;
   }
   .gd {
     /* Generic.Deleted */
-    color: var(--base08);
+    color: $base08;
   }
   .ge {
     /* Generic.Emph */
@@ -348,16 +348,16 @@ figure.highlight {
   }
   .gh {
     /* Generic.Heading */
-    color: var(--base05);
+    color: $base05;
     font-weight: bold;
   }
   .gi {
     /* Generic.Inserted */
-    color: var(--base0b);
+    color: $base0b;
   }
   .gp {
     /* Generic.Prompt */
-    color: var(--base04);
+    color: $base04;
     font-weight: bold;
   }
   .gs {
@@ -366,187 +366,187 @@ figure.highlight {
   }
   .gu {
     /* Generic.Subheading */
-    color: var(--base0c);
+    color: $base0c;
     font-weight: bold;
   }
   .kc {
     /* Keyword.Constant */
-    color: var(--base0e);
+    color: $base0e;
   }
   .kd {
     /* Keyword.Declaration */
-    color: var(--base0e);
+    color: $base0e;
   }
   .kn {
     /* Keyword.Namespace */
-    color: var(--base0c);
+    color: $base0c;
   }
   .kp {
     /* Keyword.Pseudo */
-    color: var(--base0e);
+    color: $base0e;
   }
   .kr {
     /* Keyword.Reserved */
-    color: var(--base0e);
+    color: $base0e;
   }
   .kt {
     /* Keyword.Type */
-    color: var(--base0a);
+    color: $base0a;
   }
   .ld {
     /* Literal.Date */
-    color: var(--base0b);
+    color: $base0b;
   }
   .m {
     /* Literal.Number */
-    color: var(--base09);
+    color: $base09;
   }
   .s {
     /* Literal.String */
-    color: var(--base0b);
+    color: $base0b;
   }
   .na {
     /* Name.Attribute */
-    color: var(--base0d);
+    color: $base0d;
   }
   .nb {
     /* Name.Builtin */
-    color: var(--base05);
+    color: $base05;
   }
   .nc {
     /* Name.Class */
-    color: var(--base0a);
+    color: $base0a;
   }
   .no {
     /* Name.Constant */
-    color: var(--base08);
+    color: $base08;
   }
   .nd {
     /* Name.Decorator */
-    color: var(--base0c);
+    color: $base0c;
   }
   .ni {
     /* Name.Entity */
-    color: var(--base05);
+    color: $base05;
   }
   .ne {
     /* Name.Exception */
-    color: var(--base08);
+    color: $base08;
   }
   .nf {
     /* Name.Function */
-    color: var(--base0d);
+    color: $base0d;
   }
   .nl {
     /* Name.Label */
-    color: var(--base05);
+    color: $base05;
   }
   .nn {
     /* Name.Namespace */
-    color: var(--base0a);
+    color: $base0a;
   }
   .nx {
     /* Name.Other */
-    color: var(--base0d);
+    color: $base0d;
   }
   .py {
     /* Name.Property */
-    color: var(--base05);
+    color: $base05;
   }
   .nt {
     /* Name.Tag */
-    color: var(--base0c);
+    color: $base0c;
   }
   .nv {
     /* Name.Variable */
-    color: var(--base08);
+    color: $base08;
   }
   .ow {
     /* Operator.Word */
-    color: var(--base0c);
+    color: $base0c;
   }
   .w {
     /* Text.Whitespace */
-    color: var(--base05);
+    color: $base05;
   }
   .mf {
     /* Literal.Number.Float */
-    color: var(--base09);
+    color: $base09;
   }
   .mh {
     /* Literal.Number.Hex */
-    color: var(--base09);
+    color: $base09;
   }
   .mi {
     /* Literal.Number.Integer */
-    color: var(--base09);
+    color: $base09;
   }
   .mo {
     /* Literal.Number.Oct */
-    color: var(--base09);
+    color: $base09;
   }
   .sb {
     /* Literal.String.Backtick */
-    color: var(--base0b);
+    color: $base0b;
   }
   .sc {
     /* Literal.String.Char */
-    color: var(--base05);
+    color: $base05;
   }
   .sd {
     /* Literal.String.Doc */
-    color: var(--base04);
+    color: $base04;
   }
   .s2 {
     /* Literal.String.Double */
-    color: var(--base0b);
+    color: $base0b;
   }
   .se {
     /* Literal.String.Escape */
-    color: var(--base09);
+    color: $base09;
   }
   .sh {
     /* Literal.String.Heredoc */
-    color: var(--base0b);
+    color: $base0b;
   }
   .si {
     /* Literal.String.Interpol */
-    color: var(--base09);
+    color: $base09;
   }
   .sx {
     /* Literal.String.Other */
-    color: var(--base0b);
+    color: $base0b;
   }
   .sr {
     /* Literal.String.Regex */
-    color: var(--base0b);
+    color: $base0b;
   }
   .s1 {
     /* Literal.String.Single */
-    color: var(--base0b);
+    color: $base0b;
   }
   .ss {
     /* Literal.String.Symbol */
-    color: var(--base0b);
+    color: $base0b;
   }
   .bp {
     /* Name.Builtin.Pseudo */
-    color: var(--base05);
+    color: $base05;
   }
   .vc {
     /* Name.Variable.Class */
-    color: var(--base08);
+    color: $base08;
   }
   .vg {
     /* Name.Variable.Global */
-    color: var(--base08);
+    color: $base08;
   }
   .vi {
     /* Name.Variable.Instance */
-    color: var(--base08);
+    color: $base08;
   }
   .il {
     /* Literal.Number.Integer.Long */
-    color: var(--base09);
+    color: $base09;
   }
 }
