--- a/assets/css/skin_control.scss
+++ b/assets/css/skin_control.scss
@@ -47,6 +47,564 @@
     --base0f: #d33682;
 }
 
+
+/*@import "so-simple/skin";*/
+
+
+
+/* ==========================================================================
+   Base elements
+   ========================================================================== */
+
+body {
+  color: var(--text-color);
+  background: var(--background-color);
+  border-top-color: var(--nav-background-color);
+}
+
+a {
+  color: var(--accent-color);
+
+  &:hover {
+    color: shade(var(--accent-color), 25%);
+  }
+}
+
+blockquote {
+  background-color: mix(var(--background-color), var(--accent-color), 90%);
+  border-left-color: var(--accent-color);
+}
+
+/* ==========================================================================
+   Site-wide
+   ========================================================================== */
+
+.site-title {
+  a {
+    color: var(--text-color);
+  }
+}
+
+.copyright {
+  color: lighten(var(--text-color), 25%);
+  a {
+    color: lighten(var(--text-color), 25%);
+  }
+}
+
+.taxonomy-title {
+  color: lighten(var(--text-color), 60%);
+}
+
+.taxonomy-count {
+  color: lighten(var(--text-color), 50%);
+}
+
+.taxonomy-index {
+  a {
+    border-bottom-color: var(--border-color);
+
+    &:hover {
+      color: var(--accent-color);
+    }
+  }
+}
+
+.taxonomy-section {
+  &:not(:last-child) {
+    border-bottom-color: var(--border-color);
+  }
+}
+
+.back-to-top {
+  color: lighten(var(--text-color), 50%);
+}
+
+.site-nav {
+  ul {
+    color: var(--nav-color);
+    background-color: var(--nav-background-color);
+  }
+
+  a {
+    color: var(--nav-color);
+    border-color: var(--nav-background-color);
+
+    &:hover {
+      border-color: var(--nav-color);
+    }
+  }
+}
+
+.site-footer {
+  border-top-color: var(--border-color);
+}
+
+.footnotes {
+  border-top-color: var(--border-color);
+}
+
+.site-logo-img {
+  border-color: var(--background-color);
+}
+
+.toc-wrapper {
+  border-color: mix(#fff, var(--border-color), 25%);
+
+  h2 {
+    color: var(--base05);
+    background-color: var(--base00);
+  }
+
+  li {
+    ol {
+      background-color: var(--background-color);
+    }
+
+    a {
+      &:hover,
+      &:focus {
+        border-bottom: 1px dotted var(--border-color);
+      }
+    }
+  }
+}
+
+#menu-toggle {
+  color: var(--nav-color);
+}
+
+#menu-toggle {
+  background-color: var(--nav-background-color);
+}
+
+#markdown-toc {
+  color: var(--base05);
+}
+
+.pagination {
+  li {
+    a {
+      color: mix(var(--text-color), var(--border-color), 50%);
+      border-color: var(--border-color);
+
+      &.current,
+      &.current.disabled {
+        @include yiq-contrasted(mix(var(--text-color), var(--border-color), 50%));
+      }
+
+      &.disabled {
+        color: var(--border-color);
+      }
+    }
+  }
+}
+
+.search-input {
+  border-color: var(--border-color);
+}
+
+/* ==========================================================================
+   Page
+   ========================================================================== */
+
+.page-previous,
+.page-next {
+  color: var(--text-color);
+}
+
+/* ==========================================================================
+   Entries (Posts, collection documents, etc.)
+   ========================================================================== */
+
+.entry {
+  a {
+    &:hover {
+      color: var(--accent-color);
+    }
+  }
+}
+
+/* ==========================================================================
+   Tables
+   ========================================================================== */
+
+th,
+td {
+  border-bottom-color: var(--border-color);
+}
+
+
+/* ==========================================================================
+   NOTICE TEXT BLOCKS
+   ========================================================================== */
+
+/* Default notice */
+.notice {
+  @include notice(lighten(var(--base-color), 90%));
+}
+
+/* Accent notice */
+.notice--accent {
+  @include notice(mix(#fff, var(--accent-color), 70%));
+}
+
+/* Primary notice */
+.notice--primary {
+  @include notice(mix(#fff, var(--primary-color), 70%));
+}
+
+/* Warning notice */
+.notice--warning {
+  @include notice(mix(#fff, var(--warning-color), 70%));
+}
+
+/* Success notice */
+.notice--success {
+  @include notice(mix(#fff, var(--success-color), 70%));
+}
+
+/* Danger notice */
+.notice--danger {
+  @include notice(mix(#fff, var(--danger-color), 70%));
+}
+
+/* Info notice */
+.notice--info {
+  @include notice(mix(#fff, var(--info-color), 70%));
+}
+
+/* ==========================================================================
+   Accessibility Modules
+   ========================================================================== */
+
+/* Text meant only for screen readers */
+.screen-reader-text,
+.screen-reader-text span,
+.screen-reader-shortcut {
+  background-color: var(--base-color);
+}
+
+/* ==========================================================================
+   BUTTONS
+   ========================================================================== */
+
+.btn {
+  /* button colors */
+  $buttoncolors: (primary, var(--primary-color)), (accent, var(--accent-color)), (inverse, #fff),
+  (light-outline, transparent),  (success, var(--success-color)),
+  (warning, var(--warning-color)),  (danger, var(--danger-color)),  (info, var(--info-color)),
+  (facebook, $facebook-color),  (twitter, $twitter-color), (x-twitter, $x-twitter-color),
+  (google-plus, $google-plus-color),  (linkedin, $linkedin-color),
+  (reddit, $reddit-color);
+
+  @each $buttoncolor, $color in $buttoncolors {
+    &--#{$buttoncolor} {
+      @include yiq-contrasted($color);
+      @if ($buttoncolor == inverse) {
+        border: 1px solid var(--border-color);
+      }
+      @if ($buttoncolor == light-outline) {
+        border: 1px solid #fff;
+      }
+
+      &:hover {
+        @include yiq-contrasted(mix(#000, $color, 20%));
+      }
+
+      &:visited {
+        @include yiq-contrasted($color);
+      }
+    }
+  }
+}
+
+/* ==========================================================================
+   Syntax highlighting
+   ========================================================================== */
+
+code.highlighter-rouge {
+  color: var(--base05);
+  background-color: var(--base00);
+}
+
+div.highlighter-rouge,
+figure.highlight {
+  color: var(--base05);
+  background-color: var(--base00);
+}
+
+.highlight table {
+  td {
+    &.gutter {
+      color: var(--base04);
+      border-right-color: var(--base04);
+    }
+  }
+}
+
+.highlight .hll {
+  background-color: var(--base06);
+}
+
+.highlight {
+  .c {
+    /* Comment */
+    color: var(--base04);
+  }
+  .err {
+    /* Error */
+    color: var(--base08);
+  }
+  .k {
+    /* Keyword */
+    color: var(--base0e);
+  }
+  .l {
+    /* Literal */
+    color: var(--base09);
+  }
+  .n {
+    /* Name */
+    color: var(--base05);
+  }
+  .o {
+    /* Operator */
+    color: var(--base0c);
+  }
+  .p {
+    /* Punctuation */
+    color: var(--base05);
+  }
+  .cm {
+    /* Comment.Multiline */
+    color: var(--base04);
+  }
+  .cp {
+    /* Comment.Preproc */
+    color: var(--base04);
+  }
+  .c1 {
+    /* Comment.Single */
+    color: var(--base04);
+  }
+  .cs {
+    /* Comment.Special */
+    color: var(--base04);
+  }
+  .gd {
+    /* Generic.Deleted */
+    color: var(--base08);
+  }
+  .ge {
+    /* Generic.Emph */
+    font-style: italic;
+  }
+  .gh {
+    /* Generic.Heading */
+    color: var(--base05);
+    font-weight: bold;
+  }
+  .gi {
+    /* Generic.Inserted */
+    color: var(--base0b);
+  }
+  .gp {
+    /* Generic.Prompt */
+    color: var(--base04);
+    font-weight: bold;
+  }
+  .gs {
+    /* Generic.Strong */
+    font-weight: bold;
+  }
+  .gu {
+    /* Generic.Subheading */
+    color: var(--base0c);
+    font-weight: bold;
+  }
+  .kc {
+    /* Keyword.Constant */
+    color: var(--base0e);
+  }
+  .kd {
+    /* Keyword.Declaration */
+    color: var(--base0e);
+  }
+  .kn {
+    /* Keyword.Namespace */
+    color: var(--base0c);
+  }
+  .kp {
+    /* Keyword.Pseudo */
+    color: var(--base0e);
+  }
+  .kr {
+    /* Keyword.Reserved */
+    color: var(--base0e);
+  }
+  .kt {
+    /* Keyword.Type */
+    color: var(--base0a);
+  }
+  .ld {
+    /* Literal.Date */
+    color: var(--base0b);
+  }
+  .m {
+    /* Literal.Number */
+    color: var(--base09);
+  }
+  .s {
+    /* Literal.String */
+    color: var(--base0b);
+  }
+  .na {
+    /* Name.Attribute */
+    color: var(--base0d);
+  }
+  .nb {
+    /* Name.Builtin */
+    color: var(--base05);
+  }
+  .nc {
+    /* Name.Class */
+    color: var(--base0a);
+  }
+  .no {
+    /* Name.Constant */
+    color: var(--base08);
+  }
+  .nd {
+    /* Name.Decorator */
+    color: var(--base0c);
+  }
+  .ni {
+    /* Name.Entity */
+    color: var(--base05);
+  }
+  .ne {
+    /* Name.Exception */
+    color: var(--base08);
+  }
+  .nf {
+    /* Name.Function */
+    color: var(--base0d);
+  }
+  .nl {
+    /* Name.Label */
+    color: var(--base05);
+  }
+  .nn {
+    /* Name.Namespace */
+    color: var(--base0a);
+  }
+  .nx {
+    /* Name.Other */
+    color: var(--base0d);
+  }
+  .py {
+    /* Name.Property */
+    color: var(--base05);
+  }
+  .nt {
+    /* Name.Tag */
+    color: var(--base0c);
+  }
+  .nv {
+    /* Name.Variable */
+    color: var(--base08);
+  }
+  .ow {
+    /* Operator.Word */
+    color: var(--base0c);
+  }
+  .w {
+    /* Text.Whitespace */
+    color: var(--base05);
+  }
+  .mf {
+    /* Literal.Number.Float */
+    color: var(--base09);
+  }
+  .mh {
+    /* Literal.Number.Hex */
+    color: var(--base09);
+  }
+  .mi {
+    /* Literal.Number.Integer */
+    color: var(--base09);
+  }
+  .mo {
+    /* Literal.Number.Oct */
+    color: var(--base09);
+  }
+  .sb {
+    /* Literal.String.Backtick */
+    color: var(--base0b);
+  }
+  .sc {
+    /* Literal.String.Char */
+    color: var(--base05);
+  }
+  .sd {
+    /* Literal.String.Doc */
+    color: var(--base04);
+  }
+  .s2 {
+    /* Literal.String.Double */
+    color: var(--base0b);
+  }
+  .se {
+    /* Literal.String.Escape */
+    color: var(--base09);
+  }
+  .sh {
+    /* Literal.String.Heredoc */
+    color: var(--base0b);
+  }
+  .si {
+    /* Literal.String.Interpol */
+    color: var(--base09);
+  }
+  .sx {
+    /* Literal.String.Other */
+    color: var(--base0b);
+  }
+  .sr {
+    /* Literal.String.Regex */
+    color: var(--base0b);
+  }
+  .s1 {
+    /* Literal.String.Single */
+    color: var(--base0b);
+  }
+  .ss {
+    /* Literal.String.Symbol */
+    color: var(--base0b);
+  }
+  .bp {
+    /* Name.Builtin.Pseudo */
+    color: var(--base05);
+  }
+  .vc {
+    /* Name.Variable.Class */
+    color: var(--base08);
+  }
+  .vg {
+    /* Name.Variable.Global */
+    color: var(--base08);
+  }
+  .vi {
+    /* Name.Variable.Instance */
+    color: var(--base08);
+  }
+  .il {
+    /* Literal.Number.Integer.Long */
+    color: var(--base09);
+  }
+}
+
 @media (prefers-color-scheme: dark) {
     :root{
         --base-color: #eaeaea;
@@ -82,5 +640,3 @@
         --base0f: #ff5370;
     }
 }
-
-@import "so-simple/skin";
