dark theme fix - attempt_17

--- a/_sass/so-simple/_skin.scss
+++ b/_sass/so-simple/_skin.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 body {
-  color: var(--text-color);
+  color: $text-color;
   background: $background-color;
   border-top-color: $nav-background-color;
 }
