--- a/assets/css/skin_control.scss
+++ b/assets/css/skin_control.scss
@@ -20,8 +20,8 @@
     --nav-color: #fff;
     --background-color: #fff;
     --nav-background-color: #000;
-    --code-background-color: tint($base-color, 95%);
-    --border-color: tint($base-color, 80%);
+    --code-background-color: tint(var(--base-color), 95%);
+    --border-color: tint(var(--base-color), 80%);
 
     --primary-color: #000;
     --success-color: #62c462;
@@ -606,37 +606,37 @@ figure.highlight {
 }
 
 @media (prefers-color-scheme: dark) {
-    :root{
-        --base-color: #eaeaea;
-        --text-color: #eaeaea;
-        --accent-color: #00adb5;
-        --nav-color: #aeaeae;
-        --background-color: #252a34;
-        --nav-background-color: mix(#000, $background-color, 30%);
-        --code-background-color: mix(#000, $background-color, 15%);
-        --border-color: tint($base-color, 80%);
+  :root{
+    --base-color: #eaeaea;
+    --text-color: #eaeaea;
+    --accent-color: #00adb5;
+    --nav-color: #aeaeae;
+    --background-color: #252a34;
+    --nav-background-color: mix(#000, var(--background-color), 30%);
+    --code-background-color: mix(#000, var(--background-color), 15%);
+    --border-color: tint(var(--base-color), 80%);
 
-        --primary-color: white;
-        --success-color: rgb(48, 209, 88);
-        --warning-color: rgb(255, 214, 10);
-        --danger-color: rgb(255, 69, 58);
-        --info-color: rgb(100, 210, 255);
+    --primary-color: white;
+    --success-color: rgb(48, 209, 88);
+    --warning-color: rgb(255, 214, 10);
+    --danger-color: rgb(255, 69, 58);
+    --info-color: rgb(100, 210, 255);
 
-        --base00: #263238;
-        --base01: #2e3c43;
-        --base02: #314549;
-        --base03: #546e7a;
-        --base04: #b2ccd6;
-        --base05: #eeffff;
-        --base06: #eeffff;
-        --base07: #ffffff;
-        --base08: #f07178;
-        --base09: #f78c6c;
-        --base0a: #ffcb6b;
-        --base0b: #c3e88d;
-        --base0c: #89ddff;
-        --base0d: #82aaff;
-        --base0e: #c792ea;
-        --base0f: #ff5370;
-    }
+    --base00: #263238;
+    --base01: #2e3c43;
+    --base02: #314549;
+    --base03: #546e7a;
+    --base04: #b2ccd6;
+    --base05: #eeffff;
+    --base06: #eeffff;
+    --base07: #ffffff;
+    --base08: #f07178;
+    --base09: #f78c6c;
+    --base0a: #ffcb6b;
+    --base0b: #c3e88d;
+    --base0c: #89ddff;
+    --base0d: #82aaff;
+    --base0e: #c792ea;
+    --base0f: #ff5370;
+  }
 }
