--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ paginate: true
 {{ content }}
 
 <div class="entries-{{ page.entries_layout | default: 'list' }}">
-  {%- if site.plugins contains 'jekyll-paginate' and page.paginate or site.gems contains 'jekyll-paginate' and page.paginate -%}
+  <!-- {%- if site.plugins contains 'jekyll-paginate' and page.paginate or site.gems contains 'jekyll-paginate' and page.paginate -%}
     {%- comment -%}
       Add paginator.posts loop if jekyll-paginate plugin is enabled
       and page.paginate == true
@@ -14,5 +14,6 @@ paginate: true
     {% include posts-paginated.html %}
   {%- else -%}
     {% include posts-limit.html %}
-  {%- endif -%}
+  {%- endif -%} -->
+  {% include posts-paginated.html %}
 </div>
